--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,14 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    services:
+      mssql:
+        image: mcr.microsoft.com/mssql/server:2019-latest
+        env:
+          SA_PASSWORD: ${{ secrets.PASSWORD }}
+          ACCEPT_EULA: 'Y'
+        ports:
+          - 1433:1433
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
